mobile responsiveness added

--- a/src/Components/Contacts/contacts.css
+++ b/src/Components/Contacts/contacts.css
@@ -16,6 +16,9 @@
   }
   
   @media (max-width: 28.75em) {
+    .contact-section{
+      margin: 4rem 0;
+    }
     .contact-section-header > h2 {
       font-size: 3rem;
     }
