--- a/src/Components/Introduction/intro.css
+++ b/src/Components/Introduction/intro.css
@@ -22,20 +22,12 @@
   }
 
 
-  @media (max-width: 412px) {
+  @media (max-width: 643px) {
     .welcome-section{
       overflow: hidden;
     }
     .welcome-section::before {
-      content: "";
-      position: absolute;
-      top: 132px;
-      bottom: -132px;
-      left: 0;
-      width: 300px;
-      background: #000;
-      transform: skew(19deg);
-      transform-origin:bottom;
+      display: none;
     }
   }
   .welcome-section h1 {
